# OpenGothicLauncher

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  vite.config.ts
adapters/static/: vite.config.ts
crates/ogl-assets/: Cargo.toml
crates/ogl-assets/assets/: default_config.toml
crates/ogl-assets/src/: lib.rs
crates/ogl-cli/: Cargo.toml
crates/ogl-cli/src/: main.rs
crates/ogl-core/: Cargo.toml
crates/ogl-core/src/: app_dirs.rs  config_manager.rs  engine_manager.rs  errors.rs  install_detector.rs  lib.rs  sandbox_manager.rs
crates/ogl-core/src/domain/: config.rs  engine.rs  install.rs  launch.rs  mod.rs  mods.rs  view_model.rs
crates/ogl-core/src/ports/: config.rs  executor.rs  filesystem.rs  install.rs  mod.rs  mods.rs  network.rs  paths.rs  platform.rs
crates/ogl-core/src/services/: launcher_service.rs  mod.rs
crates/ogl-executor/: Cargo.toml
crates/ogl-executor/src/: lib.rs
crates/ogl-gui/: Cargo.toml
crates/ogl-gui/src/: app_state.rs  engine_window.rs  game_panel.rs  main.rs  runtime.rs  sidebar.rs  window.rs
crates/ogl-gui/src/view_models/: app_view_model.rs  engine_manager_vm.rs  game_panel_vm.rs  mod.rs
crates/ogl-infra/: Cargo.toml
crates/ogl-infra/src/: archive.rs  config_store.rs  filesystem.rs  install_detector.rs  lib.rs  mod_files.rs  paths.rs  platform.rs
crates/ogl-mods/: Cargo.toml
crates/ogl-mods/src/: lib.rs
crates/ogl-network/: Cargo.toml
crates/ogl-network/src/: adapters.rs  downloads.rs  lib.rs  releases.rs
dev/: build.sh  run_gui.sh
docs/: 00_indeks.md  01_wizja_i_funkcje.md  02_architektura.md  03_struktura_plikow.md  04_gui_i_ux.md  05_detekcja_gier.md  06_narzedzia_i_moduly.md  application_features.md  architecture_map.md  detailed_architecture.md  detailed_directory_structure.md  folder_structure.md  game_detection_strategy.md  gui_windows.md  ogl-cli.md  ogl-core.md  ogl-executor.md  ogl-gui.md  ogl-mods.md  ogl-network.md
docs/00-overview/: goals-and-scope.md  project-overview.md  terminology.md
docs/01-architecture/: architecture-overview.md  data-flow.md  module-dependency-graph.md  runtime-flow.md  system-components.md
docs/02-codebase/: core-abstractions.md  design-patterns.md  error-handling.md  module-breakdown.md  repository-structure.md
docs/03-code-quality/: code-style.md  known-code-smells.md  maintainability-analysis.md  memory-management.md  performance-considerations.md
docs/04-development/: build-system.md  debugging.md  dependency-management.md  local-development-setup.md  testing-strategy.md
docs/05-dev-process/: branching-strategy.md  ci-cd-pipeline.md  code-review-guidelines.md  pull-request-workflow.md  release-process.md
docs/06-internals/: configuration-system.md  internal-apis.md  plugin-or-extension-system.md  state-management.md
docs/07-analysis/: improvement-proposals.md  refactoring-opportunities.md  technical-debt.md
docs/08-appendix/: external-references.md  glossary.md  tooling.md
src/: global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/engine-dashboard/: engine-dashboard.tsx
src/components/game-details-panel/: game-details-panel.tsx
src/components/game-panel/: game-panel.tsx
src/components/sidebar/: sidebar.tsx
src/components/theme-provider/: theme-provider.tsx
src/context/: launcher-context.ts
src/routes/: index.tsx  layout.tsx
src/types/: launcher.ts
