[package]
name = "ogl-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
toml.workspace = true
dirs.workspace = true

# Windows registry access for Stage 1 Steam/GOG detection
[target.'cfg(target_os = "windows")'.dependencies]
windows-registry = "0.4"

[dev-dependencies]
tempfile.workspace = true
