[package]
name = "ogl-gui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
glib.workspace = true
gtk4 = "0.9"

ogl-core = { path = "../ogl-core" }
ogl-network = { path = "../ogl-network" }
ogl-executor = { path = "../ogl-executor" }
ogl-mods = { path = "../ogl-mods" }
