[package]
name = "ogl-gui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
glib.workspace = true
gtk4 = "0.9"
gdk-pixbuf = "0.20"

ogl-core = { path = "../ogl-core" }
ogl-network = { path = "../ogl-network" }
ogl-executor = { path = "../ogl-executor" }
ogl-infra = { path = "../ogl-infra" }
ogl-assets = { path = "../ogl-assets" }
