[package]
name = "ogl-network"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
sha2.workspace = true
serde.workspace = true
hex.workspace = true
async-trait = "0.1"
ogl-core = { path = "../ogl-core" }

[dev-dependencies]
mockito = "1.4"
tempfile.workspace = true
